--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Uday G | Portfolio</title>
+  <title>Sravani | Portfolio</title>
   <meta name="description" content="Self Developed personal website build with React.js">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="Uday | Portfolio">
+  <meta itemprop="name" content="Sravani | Portfolio">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
   <meta itemprop="image"
     content="">
@@ -20,14 +20,14 @@
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://portfolio-v1-uday-gs-projects.vercel.app/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Uday | Portfolio">
+  <meta property="og:title" content="Sravani | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
   <meta property="og:image"
     content="">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Uday | Portfolio">
+  <meta name="twitter:title" content="Sravani | Portfolio">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
   <meta name="twitter:image"
     content="">
